Bug fix and better performance.